fixed bags and visibillity errors

--- a/src/components/StartPage/StartPage.module.css
+++ b/src/components/StartPage/StartPage.module.css
@@ -95,7 +95,7 @@
   display: flex;
   flex-direction: column;
   max-height: calc(100vh - 110px);
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 .modal_wrapper h2{
   text-align: center;
@@ -108,6 +108,8 @@
   position: absolute;
   top: 10px;
   right: 10px;
+
+  cursor: pointer;
 }
 
 .packagesOfCourse{
@@ -1174,4 +1176,8 @@
   line-height: 1.5;
 
   font-weight: 600;
+}
+
+.resetPasswordText {
+  cursor: pointer;
 }
